<resources>
    <string name="app_name">Riviera</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_events">Events</string>
    <string name="action_categories">Categories</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_results">Results</string>
    <string name="action_aboutDevelopers">Credits</string>
    <string name="share">Hello</string>
    <string name="search_title">Search</string>
    <string name="action_filter">Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="detailarray">
        <item>Ear Rings</item>
        <item>Mangtika</item>
        <item>Churi</item>
        <item>Necklace</item>

    </string-array>
</resources>
