<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_events" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_categories" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_favourites" />
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_results" />
        <item
            android:icon="@drawable/ic_blur_on_red_400_24dp"
            android:id="@+id/nav_about"
            android:title="@string/action_aboutDevelopers"/>

    </group>


</menu>
